--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-TOKEN=1163121273946247250
-CLIENT_ID=1474196924687974462
-GUILD_ID=1453087302464045088
-ROLE_1_ID=1474496126949396511
-ROLE_2_ID=1474496211682721934
+TOKEN=ton_token_discord
+CLIENT_ID=ton_application_id
+GUILD_ID=id_de_ton_serveur
+ROLE_1_ID=id_role_papillons
+ROLE_2_ID=id_role_dragons
 ```
 
 Crée `.gitignore` :
