--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ CLIENT_ID=ton_application_id
 GUILD_ID=id_de_ton_serveur
 ROLE_1_ID=id_role_papillons
 ROLE_2_ID=id_role_dragons
+EMOJI_1=<:ton_emoji_papillons:ID_EMOJI>
+EMOJI_2=<:ton_emoji_dragons:ID_EMOJI>
 ```
 
 Crée `.gitignore` :
