embeds + MP membres

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ ROLE_1_ID=id_role_papillons
 ROLE_2_ID=id_role_dragons
 EMOJI_1=<:ton_emoji_papillons:ID_EMOJI>
 EMOJI_2=<:ton_emoji_dragons:ID_EMOJI>
+COULEUR_1=#5865F2
+COULEUR_2=#ED4245
 ```
 
 Crée `.gitignore` :
